--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "^4.3.1",
     "express": "^4.17.1",
     "http-errors": "^1.8.0",
+    "mongoose": "^5.12.7",
     "morgan": "^1.10.0",
     "pug": "^3.0.2"
   }
