--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "devstart": "nodemon ./bin.www"
   },
   "dependencies": {
+    "async": "^3.2.0",
     "cookie-parser": "^1.4.5",
     "debug": "^4.3.1",
     "express": "^4.17.1",
